--- a/register.html
+++ b/register.html
@@ -153,40 +153,15 @@
 
         // Initialize Supabase client
         const supabaseUrl = 'https://qhkcrrphsjpytdfqfamq.supabase.co';
-        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTczNDMyNDg3OCwiZXhwIjoyMDQ5OTAwODc4fQ.A6ltvW5H0Hr8mnTAlesPHyCa6STI9IoSg9ZVgzsSzdw';
+        const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InFoa2NycnBoc2pweXRkZnFmYW1xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MzQzMjQ4NzgsImV4cCI6MjA0OTkwMDg3OH0.S9JT_WmCWYMvSixRq1RrB1UlqXm6fix_riLFYCR3JOI';
 
         const supabaseClient = supabase.createClient(supabaseUrl, supabaseKey, {
             auth: {
                 autoRefreshToken: true,
-                persistSession: true
+                persistSession: true,
+                detectSessionInUrl: false
             }
         });
-
-        // Add this before the DOMContentLoaded event listener
-        function showMessage(message, type = 'error') {
-            // Remove any existing message
-            const existingMessage = document.querySelector('.alert');
-            if (existingMessage) {
-                existingMessage.remove();
-            }
-
-            // Create new message element
-            const messageDiv = document.createElement('div');
-            messageDiv.className = `alert alert-${type}`;
-            messageDiv.innerHTML = `
-                <i class="fas ${type === 'success' ? 'fa-check-circle' : 'fa-exclamation-circle'}"></i>
-                <span>${message}</span>
-            `;
-
-            // Insert message before the form
-            const form = document.querySelector('.login-form');
-            form.parentNode.insertBefore(messageDiv, form);
-
-            // Remove message after 5 seconds
-            setTimeout(() => {
-                messageDiv.remove();
-            }, 5000);
-        }
 
         document.addEventListener('DOMContentLoaded', () => {
             const registerForm = document.getElementById('registerForm');
@@ -246,60 +221,18 @@
                 }
             });
 
-            // Function to generate sequential member ID
-            async function generateSequentialMemberId() {
-                console.log('Generating sequential member ID...');
-                const { data: existingMembers, error: fetchError } = await supabaseClient
-                    .from('profiles')
-                    .select('member_id')
-                    .not('member_id', 'is', null)
-                    .order('member_id', { ascending: true });
-
-                if (fetchError) {
-                    console.error('Error fetching last member ID:', fetchError);
-                    throw new Error('Failed to generate member ID');
-                }
-
-                let nextNumber = 1;
-                if (existingMembers && existingMembers.length > 0) {
-                    const usedNumbers = existingMembers
-                        .map(member => {
-                            const matches = member.member_id.match(/BTC(\d+)/);
-                            return matches ? parseInt(matches[1]) : 0;
-                        })
-                        .filter(num => num > 0)
-                        .sort((a, b) => a - b);
-
-                    // Find the first available number
-                    for (let i = 0; i < usedNumbers.length; i++) {
-                        if (usedNumbers[i] !== i + 1) {
-                            nextNumber = i + 1;
-                            break;
-                        }
-                    }
-                    // If no gaps found, use next number after the last one
-                    if (nextNumber === 1) {
-                        nextNumber = usedNumbers.length + 1;
-                    }
-                }
-
-                const memberId = `BTC${nextNumber.toString().padStart(3, '0')}`;
-                console.log('Generated Member ID:', memberId);
-                return memberId;
-            }
-
-            // Update the form submission handler
+            // Form submission
             registerForm.addEventListener('submit', async (e) => {
                 e.preventDefault();
                 const submitButton = document.querySelector('.login-btn');
                 submitButton.disabled = true;
                 submitButton.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Creating Account...';
-                
+
                 try {
                     // Get form values
                     const fullName = document.getElementById('fullName').value.trim();
                     const email = document.getElementById('email').value.trim();
-                    const password = document.getElementById('password').value;
+                    const password = passwordInput.value;
                     const confirmPassword = document.getElementById('confirmPassword').value;
                     const terms = document.getElementById('terms').checked;
 
@@ -308,52 +241,147 @@
                         throw new Error('Please fill in all fields and accept the terms');
                     }
 
-                    if (password !== confirmPassword) {
-                        throw new Error('Passwords do not match');
+                    // Generate verification token
+                    const verificationToken = crypto.randomUUID();
+                    console.log('Starting registration process...');
+
+                    // Generate sequential member ID
+                    console.log('Generating sequential member ID...');
+                    const { data: existingMembers, error: fetchError } = await supabaseClient
+                        .from('profiles')
+                        .select('member_id')
+                        .not('member_id', 'is', null)
+                        .order('member_id', { ascending: true })
+                        .limit(100); // Get more members to check for gaps
+
+                    if (fetchError) {
+                        console.error('Error fetching last member ID:', fetchError);
+                        throw new Error('Failed to generate member ID');
                     }
 
-                    // Generate member ID
-                    const memberId = await generateSequentialMemberId();
-                    console.log('Generated member ID:', memberId);
+                    let nextNumber = 1; // Start from 1 if no existing members
+                    if (existingMembers && existingMembers.length > 0) {
+                        // Sort member IDs numerically
+                        const usedNumbers = existingMembers
+                            .map(member => {
+                                const matches = member.member_id.match(/BTC(\d+)/);
+                                return matches ? parseInt(matches[1]) : 0;
+                            })
+                            .filter(num => num > 0)
+                            .sort((a, b) => a - b);
 
-                    // Send registration request to server
-                    const response = await fetch('https://blitztclub.com/api/register', {
+                        // Find the first available number
+                        for (let i = 0; i < usedNumbers.length; i++) {
+                            if (usedNumbers[i] !== i + 1) {
+                                nextNumber = i + 1;
+                                break;
+                            }
+                        }
+                        // If no gaps found, use next number after the last one
+                        if (nextNumber === 1) {
+                            nextNumber = usedNumbers.length + 1;
+                        }
+                    }
+
+                    const member_id = `BTC${nextNumber.toString().padStart(3, '0')}`;
+                    console.log('Generated Member ID:', member_id);
+
+                    // Create auth user first with minimal data
+                    const { data: authData, error: authError } = await supabaseClient.auth.signUp({
+                        email,
+                        password,
+                        options: {
+                            data: {
+                                full_name: fullName
+                            }
+                        }
+                    });
+
+                    if (authError) throw authError;
+
+                    // Wait a moment for the user to be created
+                    await new Promise(resolve => setTimeout(resolve, 1000));
+
+                    // Now create/update the profile with all the additional data
+                    const { error: profileUpdateError } = await supabaseClient
+                        .from('profiles')
+                        .update({ 
+                            full_name: fullName,
+                            member_id: member_id,
+                            membership_type: 'standard',
+                            membership_status: 'pending',
+                            verification_token: verificationToken
+                        })
+                        .eq('id', authData.user.id);
+
+                    if (profileUpdateError) {
+                        console.error('Profile update error:', profileUpdateError);
+                        // If profile update fails, delete the auth user
+                        try {
+                            await supabaseClient.auth.signOut();
+                        } catch (error) {
+                            console.error('Error cleaning up failed registration:', error);
+                        }
+                        throw new Error('Failed to create user profile. Please try again.');
+                    }
+
+                    // Send verification email using FormSubmit
+                    const verificationUrl = `${window.location.origin}/verify-email.html?token=${verificationToken}`;
+                    const formData = {
+                        email: email,
+                        _captcha: 'false',
+                        _template: 'box',
+                        _subject: 'Verify Your Blitz Tesla Club Membership',
+                        _next: verificationUrl,
+                        _url: verificationUrl,
+                        message: `
+                            <div style="font-family: Arial, sans-serif; max-width: 600px; margin: 0 auto;">
+                                <img src="https://i.postimg.cc/BvmtNLtB/logo.png" alt="Blitz Tesla Club Logo" style="width: 150px; margin: 20px auto; display: block;">
+                                <h1 style="color: #171a20; text-align: center;">Welcome to Blitz Tesla Club!</h1>
+                                <p>Your Member ID: ${member_id}</p>
+                                <p>Please click the button below to verify your email:</p>
+                                <div style="text-align: center; margin: 30px 0;">
+                                    <a href="${verificationUrl}" 
+                                       style="background: #171a20; color: white; padding: 12px 30px; text-decoration: none; border-radius: 5px; display: inline-block;">
+                                        Verify Email Address
+                                    </a>
+                                </div>
+                                <p style="color: #666; font-size: 14px;">
+                                    If you can't click the button, copy and paste this URL into your browser:
+                                    <br>
+                                    ${verificationUrl}
+                                </p>
+                            </div>
+                        `
+                    };
+
+                    console.log('Sending verification email...');
+                    const emailResponse = await fetch('https://formsubmit.co/ajax/info@blitztclub.com', {
                         method: 'POST',
                         headers: {
                             'Content-Type': 'application/json',
                         },
-                        body: JSON.stringify({
-                            email,
-                            password,
-                            fullName,
-                            memberId
-                        })
+                        body: JSON.stringify(formData)
                     });
 
-                    if (!response.ok) {
-                        const errorData = await response.json();
-                        throw new Error(errorData.error || 'Registration failed');
+                    if (!emailResponse.ok) {
+                        throw new Error('Failed to send verification email');
                     }
 
-                    const data = await response.json();
-                    console.log('Registration successful:', data);
-
-                    // Store registration data
+                    // Store verification data
                     localStorage.setItem('pendingVerificationEmail', email);
-                    localStorage.setItem('pendingMemberId', memberId);
+                    localStorage.setItem('verificationToken', verificationToken);
+                    localStorage.setItem('pendingMemberId', member_id);
                     localStorage.setItem('registrationTime', new Date().toISOString());
 
-                    // Show success message
-                    showMessage('Registration successful! Please check your email to verify your account.', 'success');
-                    setTimeout(() => {
-                        window.location.href = 'verify-email.html';
-                    }, 2000);
+                    console.log('Registration successful, redirecting...');
+                    window.location.replace('./verification-sent.html');
 
                 } catch (error) {
                     console.error('Registration error:', error);
                     submitButton.disabled = false;
                     submitButton.innerHTML = '<i class="fas fa-user-plus"></i> Create Account';
-                    showMessage(error.message || 'Registration failed. Please try again.');
+                    alert(error.message || 'Registration failed. Please try again.');
                 }
             });
 
