--- a/sponsors.html
+++ b/sponsors.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="navigation.js"></script>
 </head>
 <body class="sponsors-page">
     <nav>
@@ -26,7 +28,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="gallery.html">Gallery</a></li>
-            <li><a href="executive.html">Executives</a></li>
             <li><a href="news.html">News</a></li>
             <li><a href="#join">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
@@ -76,7 +77,6 @@
     </main>
 
     <footer>
-        <!-- Update footer in all HTML files to include Sponsors link -->
         <div class="footer-content">
             <div class="footer-section">
                 <h3>Quick Links</h3>
@@ -91,10 +91,9 @@
             <div class="footer-section">
                 <h3>Member Area</h3>
                 <div class="footer-links">
-                    <a href="login.html">Login</a>
-                    <a href="register.html">Register</a>
                     <a href="sponsors.html">Our Sponsors</a>
                     <a href="#member-benefits">Member Benefits</a>
+                    <a href="#" id="footerLogoutBtn">Logout</a>
                 </div>
             </div>
             
